--- a/index.html
+++ b/index.html
@@ -1,10 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>HTML</title>
 </head>
 <body>
-
+<form action="" method="post">
+<h1>Unified Modeling Language Theory Test</h1>
+<table>
+    <tbody>
+    <tr>
+        <td>Test Subject:</td>
+        <td>Unified Modeling Language</td>
+        <td>Time:</td>
+        <td>100 minute</td>
+        <td>Score:</td>
+        <td>100</td>
+    </tr>
+    <tr>
+        <td>Class:</td>
+        <td>
+            <label>
+                <input type="text" name="class">
+            </label>
+        </td>
+        <td>Student ID:</td>
+        <td>
+            <label>
+                <input type="number" name="student-id">
+            </label>
+        </td>
+        <td>Name:</td>
+        <td>
+            <label>
+                <input type="text" name="student-name">
+            </label>
+        </td>
+    </tr>
+    </tbody>
+</table>
+<h1>1、Fill in the blanks(5 points per space, 20 points total)</h1>
+<ol>
+    <li>The full name of UML in Chinese is: <input type="text" name="answer-1"></li>
+    <li>The most prominent feature of the object is: <input type="text" name="answer-2"><input type="text" name="answer-3"><input type="text" name="answer-4"></li>
+</ol>
+<h1>2、Multiple choice question(10 points per space, 20 points total)</h1>
+<ol>
+    <li>
+        <p>
+            The relationship between UML and software engineering is:
+        </p>
+        <input type="radio" value="A" name="2.1">(A)UML is software engineering
+        <br/>
+        <input type="radio" value="B" name="2.1">(B)UML participates in several stages of software development process in software engineering
+        <br/>
+        <input type="radio" value="C" name="2.1">(C)UML has nothing to do with software
+        <br/>
+        <input type="radio" value="D" name="2.1">(D)UML is part of software engineering
+    </li>
+    <li>
+        <p>Java language support:</p>
+        <input type="radio" value="A" name="2.2">(A)Single inheritance
+        <br/>
+        <input type="radio" value="B" name="2.2">(B)Multiple inheritance
+        <br/>
+        <input type="radio" value="C" name="2.2">(C)Single inheritance and multiple inheritance support
+        <br/>
+        <input type="radio" value="D" name="2.2">(D)Single inheritance and multiple inheritance are not supported
+    </li>
+</ol>
+<h1>3、Multiple choice(10 points per space, 20 points total)</h1>
+<ol>
+    <li>
+        <p>
+            The granularity of the use case is divided into the following three:
+        </p>
+        <input type="checkbox" value="A" name="3.1">(A)Overview level
+        <br/>
+        <input type="checkbox" value="B" name="3.1">(B)Demand level
+        <br/>
+        <input type="checkbox" value="C" name="3.1">(C)User target level
+        <br/>
+        <input type="checkbox" value="D" name="3.1">(D)Sub-function level
+    </li>
+    <li>
+        <p>The class diagram consists of which of the following three parts:</p>
+        <input type="checkbox" value="A" name="3.2">(A)Name
+        <br/>
+        <input type="checkbox" value="B" name="3.2">(B)Attribute
+        <br/>
+        <input type="checkbox" value="C" name="3.2">(C)Operation
+        <br/>
+        <input type="checkbox" value="D" name="3.2">(D)Function
+    </li>
+</ol>
+<h1>4、True or False(10 points per space, 20 points total)</h1>
+<ol>
+    <li>
+        Use case diagrams are only used to communicate and communicate with customers to determine demand。
+        <input type="radio" name="4.1" value="true">√
+        <input type="radio" name="4.1" value="false">×
+    </li>
+    <li>
+        In the state diagram.the termination state allows any number of multiples in a state diagram。
+        <input type="radio" name="4.2" value="true">√
+        <input type="radio" name="4.2" value="false">×
+    </li>
+</ol>
+<h1>5、Short answer question(20 points per space, 20 points total)</h1>
+<ol>
+    <li>
+        Briefly describe what the model is and how it behaves?
+        <br/>
+        <textarea name="5.1" style="height: 200px; width: 600px">    A model is a simplification and abstraction of the real world,A mode is an expression of the system.process,thing or concept of research.Can be a physical entity;can bea certain graphic; or a mathematical expression.</textarea>
+    </li>
+</ol>
+    <input type="submit" value="Calculating score">
+</form>
 </body>
 </html>
